# python_sdk

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-release.yml  code-checks.yml
examples/: logger.yml  market_maker_example.py  onboarding_example.py  placed_order_example.py  placed_order_example_advanced.py  placed_order_example_simple.py  simple_client_example.py  simple_market_maker.py  stream_example.py  utils.py  withdrawal_example.py  x10_throughput_latency_test.py
tests/: conftest.py  fast_stark_crypto-0.1.0-cp312-cp312-macosx_11_0_arm64.whl
tests/fixtures/: account.py  accounts.py  assets.py  candles.py  markets.py  orderbook.py
tests/perpetual/: test_l2_key_derivation.py  test_markets.py  test_onboarding_payload.py  test_order_object.py  test_order_object_hash.py  test_orderbook_price_impact.py  test_stream_client.py  test_trading_client.py  test_transfer_object.py  test_withdrawal_object.py
tests/utils/: test_date.py  test_http.py  test_model.py
x10/: config.py  errors.py
x10/perpetual/: accounts.py  amounts.py  assets.py  balances.py  candles.py  configuration.py  contract.py  fees.py  funding_rates.py  markets.py  order_object.py  orderbook.py  orderbooks.py  orders.py  positions.py  trades.py  transfer_object.py  transfers.py  withdrawal_object.py  withdrawals.py
x10/perpetual/abi/: stark-perpetual.json
x10/perpetual/simple_client/: simple_trading_client.py
x10/perpetual/stream_client/: __init__.py  perpetual_stream_connection.py  stream_client.py
x10/perpetual/trading_client/: __init__.py  account_module.py  base_module.py  info_module.py  markets_information_module.py  order_management_module.py  testnet_module.py  trading_client.py  user_module.py
x10/perpetual/user_client/: onboarding.py  user_client.py
x10/utils/: __init__.py  date.py  http.py  model.py  nonce.py  starkex.py  string.py
