[tool.poetry]
name = "x10-python-trading"
version = "0.1.2"
description = "Python client for X10 API"
authors = ["X10 <tech@ex10.org>"]
packages = [
    { include = "starkware" },
    { include = "x10" },
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
aiohttp = "==3.9.1"
ecdsa = "==0.18.0"
fastecdsa = "==2.3.0"
mpmath = "==1.3.0"
numpy = "==1.26.2"
pydantic = "==2.5.3"
python = "^3.10"
pyyaml = "==6.0.1"
sympy = "==1.12"
websockets = "==12.0"
fast-stark-crypto = "==0.1.0"

[tool.poetry.group.dev.dependencies]
black = "==23.12.0"
flake8 = "==6.1.0"
freezegun = "==1.4.0"
isort = "==5.13.2"
mypy = "==1.8.0"
mypy-extensions = "==1.0.0"
PyHamcrest = "2.1.0"
pytest = "==7.4.3"
pytest-aiohttp = "==1.0.5"
pytest-asyncio = "==0.23.3"
pytest-cov = "==4.1.0"
pytest-forked = "==1.6.0"
pytest-mock = "==3.12.0"
safety = "==2.4.0b2"
tox = "==4.11.4"
types-pyyaml = "==6.0.12.12"
typing-extensions = "==4.9.0"

[tool.mypy]
packages = ["examples", "tests", "x10"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "starkware.*"
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
